<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addingMultipleRecipeints"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/userIdInput" />

        <EditText
            android:id="@+id/idPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterId" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/message" />

        <EditText
            android:id="@+id/messagePrompt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollHorizontally="false"
            android:maxLines ="3"
            android:maxLength ="2000"
            android:hint="@string/enterMessage" />

    </LinearLayout>

    <Button
        android:id="@+id/maketellermessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="makeMessage"
        android:text="@string/submit" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="goBack"
        android:text="@string/backButton" />

</LinearLayout>