<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/terminalExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:onClick="closeTerminal"
        android:text="@string/terminalExit" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/terminalExit"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/terminal"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/authenticateUserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="authenticateUser"
                    android:text="@string/authenticate" />

                <Button
                    android:id="@+id/makeUserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="goToMakeUserPage"
                    android:text="@string/makeUser" />

            </LinearLayout>

            <Button
                android:id="@+id/terminalMakeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goToMakeMessageForCustomer"
                android:text="@string/leaveMessageForCustomer" />

            <Button
                android:id="@+id/giveInterestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="performGiveInterest"
                android:text="@string/giveInterest" />

            <TextView
                android:id="@+id/currentCustomerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/noServing" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/makeAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="goToMakeAccountPage"
                    android:text="@string/makeAccount" />

                <Button
                    android:id="@+id/terminalViewAccounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="goToViewAccountsPage"
                    android:text="@string/viewAccounts" />

            </LinearLayout>

            <Button
                android:id="@+id/terminalViewMessages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goToViewCustomerMessages"
                android:text="@string/viewMessages" />


            <Button
                android:id="@+id/terminalDeauthenticate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="deauthenticateUser"
                android:text="@string/deauthenticate" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>