<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:onClick="goBack"
        android:text="@string/backButton" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/backButton"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/serializeDeserializeDb"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/please_select_an_option" />

            <Button
                android:id="@+id/serializeButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_weight="0.15"
                android:onClick="performSerialization"
                android:text="@string/serialize" />

            <Button
                android:id="@+id/deserializeButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_weight="0.15"
                android:onClick="performDeserialization"
                android:text="@string/deserialize" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>